Added binaries to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,60 @@ Icon?
 ehthumbs.db
 Thumbs.db
 
+/Programs/cpu_performance/cpu_performance
+/Programs/windsensorboard_windsensor_start/windsensorboard_windsensor_start
+/Programs/windsensorboard_ntc_normalized_baseline/windsensorboard_ntc_normalized_baseline
+/Programs/motor_stop/motor_stop
+/Programs/windsensorboard_led_mode/windsensorboard_led_mode
+/Programs/motion_braitenberg/motion_braitenberg
+/Programs/windsensorboard_ntc_integration/windsensorboard_ntc_integration
+/Programs/relativepositionboard_full_calibration/relativepositionboard_full_calibration
+/Programs/windsensorboard_windsensor/windsensorboard_windsensor
+/Programs/relativepositionboard_stop/relativepositionboard_stop
+/Programs/memory_performance/memory_performance
+/Programs/test_math/test_math
+/Programs/windsensorboard_windsensor_calibration/windsensorboard_windsensor_calibration
+/Programs/motion_followline/motion_followline
+/Programs/motion_forwardbackward/motion_forwardbackward
+/Programs/windsensorboard_ntc_stream/windsensorboard_ntc_stream
+/Programs/i2c/i2c
+/Programs/template/template
+/Programs/relativepositionboard/relativepositionboard
+/Programs/battery/battery
+/Programs/windsensorboard_ntc/windsensorboard_ntc
+/Programs/windsensorboard_windsensor_stream/windsensorboard_windsensor_stream
+/Programs/motor_getspeed/motor_getspeed
+/Programs/motion_arrowkeys/motion_arrowkeys
+/Programs/relativepositionboard_full_calibration/cmdline.c
+/Programs/odorboard_led_mode/odorboard_led_mode
+/Programs/motion_random/motion_random
+/Programs/windsensorboard_led_external/windsensorboard_led_external
+/Programs/ultrasound_enable/ultrasound_enable
+/Programs/udp_sender/udp_sender
+/Programs/windsensorboard_ntc_normalized/windsensorboard_ntc_normalized
+/Programs/infrared_proximity/infrared_proximity
+/Programs/ultrasound/ultrasound
+/Programs/relativepositionboard_calibration/relativepositionboard_calibration
+/Programs/relativepositionboard_test/relativepositionboard_test
+/Programs/motor_setspeed/motor_setspeed
+/Programs/odorboard_voc_integration/odorboard_voc_integration
+/Programs/infrared_ambient/infrared_ambient
+/Programs/motor_resetposition/motor_resetposition
+/Programs/motor_getposition/motor_getposition
+/Programs/relativepositionboard_full_calibration/cmdline.h
+/Programs/windsensorboard_windsensor_stop/windsensorboard_windsensor_stop
+/Programs/odorboard_voc_stream/odorboard_voc_stream
+/Programs/relativepositionboard_start/relativepositionboard_start
+/Programs/odometry_track/odometry_track
+/Programs/motor_gotoposition/motor_gotoposition
+/Programs/relativepositionboard_stream/relativepositionboard_stream
+/Programs/udp_receiver/udp_receiver
+/Programs/windsensorboard_ntc_normalized_stream/windsensorboard_ntc_normalized_stream
+/Programs/motion_spiral/motion_spiral
+/Programs/odorboard_voc/odorboard_voc
+/Programs/tcp_server/tcp_server
+/Programs/odometry_goto/odometry_goto
+/Programs/odorboard_led_external/odorboard_led_external
+/Programs/windsensorboard_led_code/windsensorboard_led_code
+/Programs/i2c_stream_read/i2c_stream_read
+/Programs/odorboard_pump_speed/odorboard_pump_speed
