Added IMU module and applications Fixed odometry Fixed setup script

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ Thumbs.db
 /Programs/windsensorboard_led_code/windsensorboard_led_code
 /Programs/i2c_stream_read/i2c_stream_read
 /Programs/odorboard_pump_speed/odorboard_pump_speed
+/Programs/imu/imu
