--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,8 @@ Thumbs.db
 /Programs/imu/imu
 /Programs/odometry_goto_timestamp/odometry_goto_timestamp
 /Programs/rndboard_led_mode/rndboard_led_mode
+/nbproject/private/CodeAssistancePathMapper.properties
+/nbproject/private/Default.properties
+/nbproject/private/configurations.xml
+/nbproject/private/launcher.properties
+/nbproject/private/private.xml
