Added odometry_track_timestamp, misc fixes to code

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@ Thumbs.db
 /nbproject/private/configurations.xml
 /nbproject/private/launcher.properties
 /nbproject/private/private.xml
+/Programs/odometry_track_timestamp/odometry_track_timestamp
